# fast-api-demo

./: .gitignore  README.md  docker-compose.yml
containers/api/: Dockerfile  entrypoint.local.sh
containers/mysql/: db.env  my.conf
src/: pyproject.toml
src/app/: alembic.ini  main.py  sql_app.db
src/app/db/: database.py
src/app/db/models/: model_sample.py
src/app/db/repository/: repository_sample.py
src/app/migration/: env.py
src/app/migration/versions/: 3b21a9937bac_test_sql_model_add_column.py  3eb76d80e112_fix_model_define.py  53d04214383c_fix_model_define2.py  5bbe8a4a3ba2_initial_table.py  6688846d6eb7_initial_tables.py  78857baf9194_test_sqlmodel.py  7892619ec1c2_initial_tables.py  8b5d3a274c9c_add_cloumn_to_user_table.py
