[tool.poetry]
name = "fast-api-demo"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = { extras = ["standard"], version = "^0.31.0" }
sqlmodel = "^0.0.22"
alembic = "^1.13.3"
aiomysql = "^0.2.0"
mysqlclient = "^2.2.4"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
